Fixed margin collapse on tables inside tabbed containers

--- a/src/assets/stylesheets/extensions/pymdown/_tabbed.scss
+++ b/src/assets/stylesheets/extensions/pymdown/_tabbed.scss
@@ -32,7 +32,6 @@
     display: none;
     order: 99;
     width: 100%;
-    overflow: auto;
     box-shadow: 0 px2rem(-1px) var(--md-default-fg-color--lightest);
 
     // Actual content
